Changed location of AchievementsSection file and fixed NavBar to align column wise properly.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,3 +14,8 @@ body {
   -webkit-font-smoothing: antialiased;
   background-color: var(--background);
 }
+
+.fit-image {
+  max-width: 100%;
+  height: auto
+}
